# dendrolog

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  project_configure.bat
.github/workflows/: build.yml  ci.yml  release.yml
docs/: help_en.md  help_ru.md
packaging/linux/: dendrolog.desktop
packaging/windows/: dendrolog.iss
resources/: resources.qrc
resources/windows/: dendrolog.rc.in
scripts/: find-qt.ps1  generate_icons.py  generate_test_log.py
src/: LogListView.cpp  LogListView.h  appsettings.cpp  appsettings.h  apptheme.cpp  apptheme.h  cardframe.cpp  cardframe.h  conversionpatterndialog.cpp  conversionpatterndialog.h  conversionpatterndialog.ui  directoryscanner.cpp  directoryscanner.h  directoryscannerpanel.cpp  directoryscannerpanel.h  entrydetailspanel.cpp  entrydetailspanel.h  filechangedetector.cpp  filechangedetector.h  filterpanelwidget.cpp  filterpanelwidget.h  filterruleset.cpp  filterruleset.h  highlightpalette.h  indexedlogstore.cpp  indexedlogstore.h  lineclassifier.cpp  lineclassifier.h  lineindex.cpp  lineindex.h  linewrapper.h  logcolors.h  logentry.h  logfield.h  logfile.cpp  logfile.h  logindexer.cpp  logindexer.h  logmodel.cpp  logmodel.h  (+56 more)
tests/lineindex_smoke/: CMakeLists.txt  main.cpp
tests/pattern_smoke/: CMakeLists.txt  main.cpp
