cmake_minimum_required(VERSION 3.16)
project(PatternSmoke CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(Qt6 REQUIRED COMPONENTS Core)
add_executable(pattern_smoke main.cpp ../../src/logpattern.cpp ../../src/patternheuristics.cpp)
target_include_directories(pattern_smoke PRIVATE ../../src)
target_link_libraries(pattern_smoke PRIVATE Qt6::Core)
